--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body style="background: #0E0E0E;">
     <div id="app"></div>
-    <script src="/out.js"></script>
+    <script src="out.js"></script>
   </body>
 </html>
