deploy: 5edb6eb614d1e6424a3530b12a401c149be65ab2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body style="background: #0E0E0E;">
     <div id="app"></div>
+    <script>window.PUBLIC_PATH = '';</script>
     <script src="out.js"></script>
   </body>
 </html>
