--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Github 2049</title>
   </head>
   <body style="background: #0E0E0E;">
   	<div id="app"></div>
+    <script>window.PUBLIC_PATH = 'http://127.0.0.1:8000/';</script>
     <script src="http://localhost:8000/index.js"></script>
   </body>
 </html>
